@@ -13,15 +13,29 @@ import com.example.notionclone.domain.notification.entity.NotificationStatus;
 import com.example.notionclone.domain.permission.repository.PermissionRepository;
 import com.example.notionclone.domain.permission.entity.Permission;
 import com.example.notionclone.domain.permission.entity.PermissionStatus;
+import com.example.notionclone.domain.permission.entity.PermissionType;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.beans.factory.annotation.Autowired;
 
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.Objects;
 import java.util.ArrayList;
+import com.example.notionclone.domain.document.entity.ViewType;
+import java.util.Optional;
+import com.example.notionclone.domain.document.dto.CreateDocumentRequest;
+import com.example.notionclone.domain.document.dto.UpdateDocumentRequest;
+import com.example.notionclone.domain.permission.service.PermissionService;
+import com.example.notionclone.domain.user.repository.UserRepository;
+import java.util.stream.Stream;
+import com.example.notionclone.domain.document.entity.DocumentProperty;
+import com.example.notionclone.domain.document.dto.DocumentPropertyDto;
+import com.example.notionclone.domain.document.entity.DocumentPropertyTagOption;
+import com.example.notionclone.domain.document.repository.DocumentPropertyTagOptionRepository;
+import com.example.notionclone.domain.document.repository.DocumentPropertyRepository;
 
 @Slf4j
 @Service
@@ -32,14 +46,35 @@ public class DocumentService {
   private final WorkspaceRepository workspaceRepository;
   private final NotificationRepository notificationRepository;
   private final PermissionRepository permissionRepository;
+  private final PermissionService permissionService;
+  private final UserRepository userRepository;
+  private final DocumentPropertyTagOptionRepository documentPropertyTagOptionRepository;
+  @Autowired
+  private DocumentPropertyRepository documentPropertyRepository;
 
-  public List<DocumentResponse> getDocumentsByWorkspace(Long workspaceId) {
-    log.debug("Getting documents for workspace: {}", workspaceId);
-    return documentRepository.findByWorkspaceIdAndIsTrashedFalse(workspaceId)
-        .stream()
+  public List<DocumentResponse> getDocumentsByWorkspace(Long workspaceId, User user) {
+    // 1. 사용자가 소유한 문서 조회
+    List<Document> ownedDocuments = documentRepository.findByWorkspaceIdAndUserIdAndIsTrashedFalse(workspaceId,
+        user.getId());
+
+    // 2. 사용자가 공유받은 문서 ID 조회
+    List<Long> sharedDocumentIds = permissionRepository.findAcceptedDocumentIdsByUserAndWorkspace(user.getId(),
+        PermissionStatus.ACCEPTED, workspaceId);
+
+    // 3. 공유받은 문서 정보 조회 및 휴지통 상태 필터링
+    List<Document> sharedDocuments = documentRepository.findAllById(sharedDocumentIds).stream()
+        .filter(doc -> !doc.isTrashed())
+        .collect(Collectors.toList());
+
+    // 4. 두 목록을 합치고 중복 제거
+    List<Document> allDocuments = Stream.concat(ownedDocuments.stream(), sharedDocuments.stream())
+        .distinct()
+        .collect(Collectors.toList());
+
+    return allDocuments.stream()
         .map(doc -> {
-            List<Permission> permissions = permissionRepository.findByDocument(doc);
-            return DocumentResponse.from(doc, permissions);
+          boolean hasChildren = documentRepository.existsByParentIdAndIsTrashedFalse(doc.getId());
+          return DocumentResponse.fromDocumentWithPermissionsAndChildren(doc, doc.getPermissions(), hasChildren);
         })
         .collect(Collectors.toList());
   }
@@ -48,30 +83,40 @@ public class DocumentService {
     Document document = documentRepository.findById(id)
         .orElseThrow(() -> new ResourceNotFoundException("Document not found with id: " + id));
 
-    // 1. 소유자면 허용
-    if (document.getUser().getId().equals(user.getId())) {
-        List<Permission> permissions = permissionRepository.findByDocument(document);
-        return DocumentResponse.from(document, permissions);
+    boolean hasPermission = permissionRepository.existsByUserAndDocumentAndStatus(user, document,
+        PermissionStatus.ACCEPTED);
+    if (document.getUser().getId().equals(user.getId()) || hasPermission) { // 유저가 소유한 문서이거나 공유받은 문서일 경우
+      List<Permission> permissions = permissionRepository.findByDocument(document);
+      boolean hasChildren = documentRepository.existsByParentIdAndIsTrashedFalse(document.getId());
+      boolean hasParent = document.getParent() != null;
+
+      List<DocumentProperty> properties = documentPropertyRepository
+          .findByDocument(hasParent ? document.getParent() : document);
+      List<DocumentPropertyDto> propertyDtos = properties.stream()
+          .map(property -> {
+            DocumentPropertyDto dto = DocumentPropertyDto.from(property);
+            if ("TAG".equals(property.getType().name())) {
+              List<DocumentPropertyTagOption> tagOptions = documentPropertyTagOptionRepository
+                  .findByPropertyId(property.getId());
+              List<DocumentPropertyDto.TagOptionDto> tagOptionDtos = tagOptions.stream()
+                  .map(tagOption -> new DocumentPropertyDto.TagOptionDto(tagOption)).collect(Collectors.toList());
+              dto.setTagOptions(tagOptionDtos);
+            }
+            return dto;
+          })
+          .collect(Collectors.toList());
+      return DocumentResponse.fromDocumentWithPermissionsAndChildren(document, permissions, hasChildren, propertyDtos);
+    } else {
+      throw new org.springframework.security.access.AccessDeniedException("No permission to access this document.");
     }
-
-    // 2. Permission에서 ACCEPTED 권한 확인
-    boolean hasAcceptedPermission = permissionRepository.findByDocument(document).stream()
-        .anyMatch(p -> p.getUser().getId().equals(user.getId())
-                    && p.getStatus() == PermissionStatus.ACCEPTED);
-
-    if (!hasAcceptedPermission) {
-        throw new ResourceNotFoundException("No permission to view this document.");
-    }
-
-    List<Permission> permissions = permissionRepository.findByDocument(document);
-    return DocumentResponse.from(document, permissions);
   }
 
   public List<DocumentResponse> getAllDocuments() {
     return documentRepository.findAll().stream()
         .map(doc -> {
-            List<Permission> permissions = permissionRepository.findByDocument(doc);
-            return DocumentResponse.from(doc, permissions);
+          List<Permission> permissions = permissionRepository.findByDocument(doc);
+          boolean hasChildren = documentRepository.existsByParentIdAndIsTrashedFalse(doc.getId());
+          return DocumentResponse.fromDocumentWithPermissionsAndChildren(doc, permissions, hasChildren);
         })
         .collect(Collectors.toList());
   }
@@ -79,43 +124,92 @@ public class DocumentService {
   public List<DocumentResponse> getDocumentsWithNoWorkspace() {
     return documentRepository.findDocumentsWithNoWorkspace().stream()
         .map(doc -> {
-            List<Permission> permissions = permissionRepository.findByDocument(doc);
-            return DocumentResponse.from(doc, permissions);
+          List<Permission> permissions = permissionRepository.findByDocument(doc);
+          boolean hasChildren = documentRepository.existsByParentIdAndIsTrashedFalse(doc.getId());
+          return DocumentResponse.fromDocumentWithPermissionsAndChildren(doc, permissions, hasChildren);
         })
         .collect(Collectors.toList());
   }
 
   @Transactional
-  public DocumentResponse createDocument(String title, String content, Long workspaceId, User user) {
-    log.debug("Creating document in workspace: {} for user: {}", workspaceId, user.getId());
+  public DocumentResponse createDocument(Long workspaceId, CreateDocumentRequest request, String creatorEmail) {
+    User creator = userRepository.findByEmail(creatorEmail)
+        .orElseThrow(() -> new ResourceNotFoundException("User not found with email: " + creatorEmail));
+    permissionService.checkPermission(workspaceId, null, creator.getId(), PermissionType.WRITE);
+
     Workspace workspace = workspaceRepository.findById(workspaceId)
         .orElseThrow(() -> new ResourceNotFoundException("Workspace not found with id: " + workspaceId));
 
+    Document parent = null;
+    if (request.getParentId() != null) {
+      parent = documentRepository.findById(request.getParentId())
+          .orElseThrow(
+              () -> new ResourceNotFoundException("Parent document not found with id: " + request.getParentId()));
+    }
+
     Document document = Document.builder()
-        .title(title)
-        .content(content)
+        .title(request.getTitle())
+        .content(request.getContent())
         .workspace(workspace)
-        .user(user)
+        .user(creator)
+        .parent(parent)
+        .viewType(request.getViewType() != null ? ViewType.valueOf(request.getViewType()) : ViewType.PAGE)
         .build();
 
-    return DocumentResponse.from(documentRepository.save(document));
+    Document savedDocument = documentRepository.save(document);
+    boolean hasChildren = documentRepository.existsByParentIdAndIsTrashedFalse(savedDocument.getId());
+
+    // 생성자에게 자동으로 OWNER 권한 부여
+    Permission ownerPermission = Permission.builder()
+        .document(savedDocument)
+        .user(creator)
+        .permissionType(PermissionType.OWNER)
+        .status(PermissionStatus.ACCEPTED)
+        .build();
+    permissionRepository.save(ownerPermission);
+
+    return DocumentResponse.fromDocumentWithPermissionsAndChildren(savedDocument, savedDocument.getPermissions(),
+        hasChildren);
   }
 
   @Transactional
-  public DocumentResponse updateDocument(Long id, String title, String content) {
-    log.debug("Updating document: {}", id);
-    Document document = documentRepository.findById(id)
-        .orElseThrow(() -> new ResourceNotFoundException("Document not found with id: " + id));
+  public DocumentResponse updateDocument(Long workspaceId, Long documentId, UpdateDocumentRequest request,
+      String updaterEmail) {
+    User updater = userRepository.findByEmail(updaterEmail)
+        .orElseThrow(() -> new ResourceNotFoundException("User not found with email: " + updaterEmail));
+    permissionService.checkPermission(workspaceId, documentId, updater.getId(), PermissionType.WRITE);
 
-    document.update(title, content);
-    return DocumentResponse.from(document);
+    Document document = documentRepository.findById(documentId)
+        .orElseThrow(() -> new ResourceNotFoundException("문서를 찾을 수 없습니다."));
+
+    document.update(
+        Optional.ofNullable(request.getTitle()).orElse(""),
+        Optional.ofNullable(request.getContent()).orElse(""));
+
+    if (request.getViewType() != null) {
+      document.setViewType(ViewType.valueOf(request.getViewType()));
+    }
+
+    boolean hasChildren = documentRepository.existsByParentIdAndIsTrashedFalse(document.getId());
+    return DocumentResponse.fromDocumentWithPermissionsAndChildren(document, document.getPermissions(), hasChildren);
   }
 
   @Transactional
-  public void deleteDocument(Long id) {
+  public void deleteDocument(Long id, User user) {
     log.debug("Soft deleting document: {}", id);
     Document document = documentRepository.findById(id)
         .orElseThrow(() -> new ResourceNotFoundException("Document not found with id: " + id));
+
+    boolean isOwner = document.getUser().getId().equals(user.getId());
+    boolean hasWritePermission = permissionRepository.findByDocument(document).stream()
+        .anyMatch(p -> p.getUser().getId().equals(user.getId())
+            && p.getStatus() == PermissionStatus.ACCEPTED
+            && (p.getPermissionType() == PermissionType.WRITE || p.getPermissionType() == PermissionType.OWNER));
+
+    if (!isOwner && !hasWritePermission) {
+      throw new org.springframework.security.access.AccessDeniedException("No permission to delete this document.");
+    }
+
     document.setTrashed(true);
     documentRepository.save(document);
   }
@@ -133,8 +227,9 @@ public class DocumentService {
     return documentRepository.findByWorkspaceIdAndIsTrashedTrue(workspaceId)
         .stream()
         .map(doc -> {
-            List<Permission> permissions = permissionRepository.findByDocument(doc);
-            return DocumentResponse.from(doc, permissions);
+          List<Permission> permissions = permissionRepository.findByDocument(doc);
+          boolean hasChildren = documentRepository.existsByParentIdAndIsTrashedFalse(doc.getId());
+          return DocumentResponse.fromDocumentWithPermissionsAndChildren(doc, permissions, hasChildren);
         })
         .collect(Collectors.toList());
   }
@@ -174,19 +269,48 @@ public class DocumentService {
     List<Document> personalDocs = documentRepository.findByWorkspaceIdAndUserId(workspaceId, user.getId());
     // 2. 초대받아 ACCEPTED된 공유 문서
     List<Long> acceptedDocIds = permissionRepository.findAcceptedDocumentIdsByUserAndWorkspace(
-        user.getId(), PermissionStatus.ACCEPTED, workspaceId
-    );
-    List<Document> sharedDocs = acceptedDocIds.isEmpty() ? List.of() :
-      documentRepository.findAllById(acceptedDocIds)
-        .stream()
-        .filter(doc -> !doc.getUser().getId().equals(user.getId()))
-        .collect(Collectors.toList());
+        user.getId(), PermissionStatus.ACCEPTED, workspaceId);
+    List<Document> sharedDocs = acceptedDocIds.isEmpty() ? List.of()
+        : documentRepository.findAllById(acceptedDocIds)
+            .stream()
+            .filter(doc -> !doc.getUser().getId().equals(user.getId()))
+            .toList();
     List<Document> allDocs = new ArrayList<>();
     allDocs.addAll(personalDocs);
     allDocs.addAll(sharedDocs);
     return allDocs.stream().map(doc -> {
-        List<Permission> permissions = permissionRepository.findByDocument(doc);
-        return DocumentResponse.from(doc, permissions);
+      List<Permission> permissions = permissionRepository.findByDocument(doc);
+      boolean hasChildren = documentRepository.existsByParentIdAndIsTrashedFalse(doc.getId());
+      return DocumentResponse.fromDocumentWithPermissionsAndChildren(doc, permissions, hasChildren);
     }).collect(Collectors.toList());
+  }
+
+  @Transactional(readOnly = true)
+  public List<DocumentResponse> getChildDocuments(Long parentId, User user) {
+    List<Document> children = documentRepository.findByParentIdAndIsTrashedFalse(parentId);
+    // 권한에 따라 필터링
+    List<Document> accessibleChildren = children.stream().filter(doc -> {
+      if (doc.getUser().getId().equals(user.getId())) { // 소유자
+        return true;
+      }
+      // 공유받은 문서
+      return permissionRepository.existsByUserAndDocumentAndStatus(user, doc, PermissionStatus.ACCEPTED);
+    }).collect(Collectors.toList());
+
+    return accessibleChildren.stream()
+        .map(doc -> {
+          List<Permission> permissions = permissionRepository.findByDocument(doc);
+          boolean hasChildren = documentRepository.existsByParentIdAndIsTrashedFalse(doc.getId());
+          return DocumentResponse.fromDocumentWithPermissionsAndChildren(doc, permissions, hasChildren);
+        })
+        .collect(Collectors.toList());
+  }
+
+  @Transactional
+  public void updateTitleColumnWidth(Long documentId, Integer width) {
+    Document document = documentRepository.findById(documentId)
+        .orElseThrow(() -> new ResourceNotFoundException("Document not found with id: " + documentId));
+    document.setTitleColumnWidth(width);
+    documentRepository.save(document);
   }
 }
